refactor!: drop Bukkit and Bungee support, focus exclusively on Velocity